force-app/main/default/objects/IPI_warranty__c/IPI_warranty__c.object-meta.xml
<CustomObject>
    <label>warranty</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>warranty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>warranties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>