force-app/main/default/objects/IPI_warranty__c/fields/IPI_ClientName__c.field-meta.xml
<CustomField>
    <fullName>IPI_ClientName__c</fullName>
    <formula>IPI_Contract__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client name</label>
    <type>Text</type>
</CustomField>