force-app/main/default/objects/IPI_warranty__c/fields/IPI_Contract__c.field-meta.xml
<CustomField>
    <fullName>IPI_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>warranties</relationshipLabel>
    <relationshipName>warranties</relationshipName>
    <type>Lookup</type>
</CustomField>