force-app/main/default/objects/IPI_warranty__c/fields/IPI_Duedate__c.field-meta.xml
<CustomField>
    <fullName>IPI_Duedate__c</fullName>
    <label>Due date</label>
    <type>Date</type>
</CustomField>