force-app/main/default/objects/IPI_warranty__c/fields/IPI_Status__c.field-meta.xml
<CustomField>
    <fullName>IPI_Status__c</fullName>
    <formula>if(TODAY()&gt; IPI_Duedate__c,&apos;Not Insured&apos;,&apos;Assured&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>