force-app/main/default/objects/IPI_warranty__c/fields/IPI_WarrantDays__c.field-meta.xml
<CustomField>
    <fullName>IPI_WarrantDays__c</fullName>
    <formula>IPI_Contract__r.IPI_WarrantyDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warrant Day&apos;s</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>