force-app/main/default/objects/IPI_warranty__c/fields/IPI_Warrantycode__c.field-meta.xml
<CustomField>
    <fullName>IPI_Warrantycode__c</fullName>
    <displayFormat>w-{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Warranty code</label>
    <type>AutoNumber</type>
</CustomField>