force-app/main/default/objects/IPI_warranty__c/fields/IPI_WarrantyDays__c.field-meta.xml
<CustomField>
    <fullName>IPI_WarrantyDays__c</fullName>
    <label>Warranty Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>