force-app/main/default/objects/IPI_warranty__c/fields/TotalValueProposed__c.field-meta.xml
<CustomField>
    <fullName>TotalValueProposed__c</fullName>
    <formula>IPI_Contract__r.IPI_Quote__r.IPI_AmountC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total value proposed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>