force-app/main/default/objects/IPI_warranty__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IPI_Status__c</columns>
    <columns>IPI_Contract__c</columns>
    <columns>IPI_Duedate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>